
allprojects {
    apply plugin: 'java-library'
    apply plugin: 'maven-publish'

    version = '1.0-SNAPSHOT'
    group = 'com.ruppyrup.javapoet'

    java {
        toolchain {
            languageVersion = JavaLanguageVersion.of(11)
        }
    }

    repositories {
        mavenLocal()
        mavenCentral()
    }

    jar.finalizedBy(publishToMavenLocal)

    dependencies {
        testImplementation platform('org.junit:junit-bom:5.10.0')
        testImplementation 'org.junit.jupiter:junit-jupiter'
        testImplementation 'org.assertj:assertj-core:3.6.1'
    }

    test {
        useJUnitPlatform()
    }

    publishing {
        publications {
            mavenJava(MavenPublication) {
                groupId = project.group
                artifactId = project.name
                version = project.version
            }
        }
        repositories {
            mavenLocal()
        }
    }
}

//dependencies {
//    testImplementation platform('org.junit:junit-bom:5.10.0')
//    testImplementation 'org.junit.jupiter:junit-jupiter'
//    testImplementation 'org.assertj:assertj-core:3.6.1'
//}
//
//
//test {
//    useJUnitPlatform()
//}


task printSourceSetInformation() {

    doLast {
        sourceSets.each { srcSet ->
            println "[" + srcSet.name + "]"
            print "-->Source directories: " + srcSet.allJava.srcDirs + "\n"
            print "-->Output directories: " + srcSet.output.classesDirs.files + "\n"
            print "-->Compile classpath:\n"
            srcSet.compileClasspath.files.each {
                print "  " + it.path + "\n"
            }
            println ""
        }
    }
}